# ha-chameleon

./: .editorconfig  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  Makefile  README-developers.md  README.md  TODO.md  docker-compose.yml  hacs.json  pyproject.toml
.github/workflows/: hacs.yaml  hassfest.yaml  lint.yaml  release.yaml
custom_components/chameleon/: __init__.py  animations.py  button.py  color_extractor.py  config_flow.py  const.py  helpers.py  light_controller.py  manifest.json  number.py  select.py  services.yaml  strings.json  switch.py
custom_components/chameleon/translations/: en.json
docs/: read.md
docs/images/: README.md
examples/images/: README.md
prd/: 01-custom-chameleon-card.md
scripts/: dev-server.sh  setup-dev.sh
tests/: __init__.py  conftest.py  test_color_extractor.py  test_config_flow.py  test_light_controller.py
